# sdkwork-api-router

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  backup.ps1  backup.sh  build.ps1  build.sh  clippy.toml  install.ps1  install.sh  package.json  restore.ps1  restore.sh  start-dev.ps1  start-dev.sh  start.ps1  start.sh  stop-dev.ps1  stop-dev.sh  stop.ps1  stop.sh  validate-config.ps1  validate-config.sh
apps/sdkwork-router-portal/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/sdkwork-router-portal/src-tauri/capabilities/: main.json
apps/sdkwork-router-portal/src-tauri/src/: desktop_runtime.rs  desktop_runtime_config.rs  main.rs
crates/sdkwork-api-app-billing/: Cargo.toml
crates/sdkwork-api-app-billing/src/: account_balance.rs  billing_events.rs  billing_kernels.rs  billing_summary.rs  billing_support.rs  lib.rs
crates/sdkwork-api-app-billing/tests/: account_kernel_commands.rs  account_kernel_mutations.rs  account_kernel_service.rs  billing_summary.rs  quota_and_ledger.rs
crates/sdkwork-api-app-commerce/: Cargo.toml
crates/sdkwork-api-app-commerce/src/: coupon_catalog.rs  coupon_state.rs  error.rs  lib.rs  order.rs  payment_attempt.rs  payment_event.rs  reconciliation.rs  refund.rs  webhook.rs
crates/sdkwork-api-app-commerce/tests/: marketing_checkout_closure.rs
crates/sdkwork-api-app-commerce/tests/marketing_checkout_closure/: quote_preview.rs
crates/sdkwork-api-app-coupon/: Cargo.toml
crates/sdkwork-api-app-coupon/src/: lib.rs
crates/sdkwork-api-app-jobs/: Cargo.toml
crates/sdkwork-api-app-jobs/src/: lib.rs
crates/sdkwork-api-app-jobs/tests/: marketing_recovery_jobs.rs
crates/sdkwork-api-app-marketing/: Cargo.toml
crates/sdkwork-api-app-marketing/src/: context.rs  create.rs  governance.rs  idempotency.rs  kernel.rs  lib.rs  operations.rs  policy.rs  pricing.rs  query.rs  recovery.rs  state.rs
crates/sdkwork-api-app-marketing/src/context/: recovery.rs  resolution.rs  types.rs  visibility.rs
crates/sdkwork-api-app-marketing/src/create/: budget.rs  campaign.rs  code.rs  support.rs  template.rs
crates/sdkwork-api-app-marketing/src/governance/: budget.rs  campaign.rs  code.rs  template.rs
crates/sdkwork-api-app-marketing/src/idempotency/: errors.rs  fingerprint.rs  ids.rs  keys.rs
crates/sdkwork-api-app-marketing/src/kernel/: confirm.rs  decision.rs  error.rs  reserve.rs  rollback.rs  validate.rs
crates/sdkwork-api-app-marketing/src/operations/: confirm.rs  error.rs  release.rs  replay.rs  reserve.rs  rollback.rs  support.rs  types.rs  validate.rs
crates/sdkwork-api-app-marketing/src/query/: admin.rs  catalog.rs  order_evidence.rs  subject.rs
crates/sdkwork-api-app-marketing/src/recovery/: budget.rs  expiration.rs  outbox.rs  reservation.rs  runner.rs  types.rs
crates/sdkwork-api-app-marketing/src/state/: budget.rs  code.rs  support.rs
crates/sdkwork-api-app-marketing/tests/: validate_reserve_redeem.rs
crates/sdkwork-api-app-rate-limit/: Cargo.toml
crates/sdkwork-api-app-rate-limit/src/: lib.rs
crates/sdkwork-api-app-rate-limit/tests/: coupon_rate_limit.rs
crates/sdkwork-api-cache-core/: Cargo.toml
crates/sdkwork-api-cache-core/src/: lib.rs
crates/sdkwork-api-cache-core/tests/: cache_contract.rs
crates/sdkwork-api-cache-memory/: Cargo.toml
crates/sdkwork-api-cache-memory/src/: lib.rs
crates/sdkwork-api-cache-memory/tests/: memory_cache.rs
crates/sdkwork-api-cache-redis/: Cargo.toml
crates/sdkwork-api-cache-redis/src/: lib.rs
crates/sdkwork-api-cache-redis/tests/: redis_cache.rs
crates/sdkwork-api-config/: Cargo.toml
crates/sdkwork-api-config/src/: config_support.rs  env_keys.rs  lib.rs  loader.rs  standalone_config.rs  types.rs
crates/sdkwork-api-config/tests/: config_loading.rs  security_posture.rs
crates/sdkwork-api-ext-provider-native-mock/: Cargo.toml
crates/sdkwork-api-ext-provider-native-mock/src/: lib.rs
crates/sdkwork-api-extension-host/: Cargo.toml
crates/sdkwork-api-extension-host/src/: lib.rs
crates/sdkwork-api-extension-host/tests/: connector_runtime.rs  discovery.rs  native_dynamic_runtime.rs
crates/sdkwork-api-interface-portal/: Cargo.toml
crates/sdkwork-api-interface-portal/src/: auth.rs  billing.rs  commerce.rs  gateway.rs  jobs.rs  lib.rs  marketing.rs  marketing_handlers.rs  marketing_support.rs  marketing_types.rs  openapi.rs  routing.rs  state.rs  workspace.rs
crates/sdkwork-api-interface-portal/tests/: account_billing_routes.rs  async_jobs_routes.rs  marketing_coupon_routes.rs  openapi_route.rs  portal_api_keys.rs  portal_auth.rs  portal_commerce.rs  portal_dashboard.rs  portal_order_center.rs  portal_routing.rs  portal_usage_fields.rs
crates/sdkwork-api-observability/: Cargo.toml
crates/sdkwork-api-observability/src/: lib.rs
crates/sdkwork-api-observability/tests/: telemetry_smoke.rs
crates/sdkwork-api-runtime-host/: Cargo.toml
crates/sdkwork-api-runtime-host/src/: lib.rs
crates/sdkwork-api-runtime-host/tests/: daemon_mode.rs  embedded_runtime.rs  web_runtime_routing.rs
crates/sdkwork-api-secret-keyring/: Cargo.toml
crates/sdkwork-api-secret-keyring/src/: lib.rs
crates/sdkwork-api-secret-keyring/tests/: keyring_store.rs
crates/sdkwork-api-secret-local/: Cargo.toml
crates/sdkwork-api-secret-local/src/: lib.rs
crates/sdkwork-api-secret-local/tests/: file_store.rs
crates/sdkwork-api-storage-sqlite/: Cargo.toml
crates/sdkwork-api-storage-sqlite/src/: admin_store_impl.rs  lib.rs  marketing_kernel_transaction.rs  marketing_store_impl.rs  marketing_support.rs  migrations.rs  sqlite_migration_billing_schema.rs  sqlite_migration_marketing_schema.rs  sqlite_migration_seed.rs  tests.rs
crates/sdkwork-api-storage-sqlite/tests/: account_kernel_contract.rs  account_kernel_roundtrip.rs  account_schema.rs  admin_store_trait.rs  catalog_bindings.rs  identity_kernel_roundtrip.rs  marketing_atomic_commands.rs  marketing_roundtrip.rs  marketing_transaction.rs  payment_store.rs  quota_policies.rs  routing_policies.rs  sqlite_migrations.rs
deploy/: README.md
services/router-web-service/: Cargo.toml
services/router-web-service/src/: main.rs
(+1276 files in other folders)
