[workspace]
members = [
    "crates/sdkwork-api-config",
    "crates/sdkwork-api-contract-gateway",
    "crates/sdkwork-api-contract-openai",
    "crates/sdkwork-api-kernel",
    "crates/sdkwork-api-observability",
    "services/gateway-service",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
