[package]
name = "sdkwork-api-app-commerce"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-api-app-marketing = { path = "../sdkwork-api-app-marketing" }
sdkwork-api-app-coupon = { path = "../sdkwork-api-app-coupon" }
sdkwork-api-domain-billing = { path = "../sdkwork-api-domain-billing" }
sdkwork-api-domain-commerce = { path = "../sdkwork-api-domain-commerce" }
sdkwork-api-domain-coupon = { path = "../sdkwork-api-domain-coupon" }
sdkwork-api-domain-marketing = { path = "../sdkwork-api-domain-marketing" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
utoipa.workspace = true

[dev-dependencies]
sdkwork-api-domain-marketing = { path = "../sdkwork-api-domain-marketing" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio.workspace = true

[lib]
path = "src/lib.rs"
