[package]
name = "sdkwork-api-app-coupon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-coupon = { path = "../sdkwork-api-domain-coupon" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }

[lib]
path = "src/lib.rs"
