[package]
name = "sdkwork-api-app-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
sdkwork-api-app-marketing = { path = "../sdkwork-api-app-marketing" }
sdkwork-api-domain-jobs = { path = "../sdkwork-api-domain-jobs" }
sdkwork-api-observability = { path = "../sdkwork-api-observability" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }

[dev-dependencies]
sdkwork-api-domain-marketing = { path = "../sdkwork-api-domain-marketing" }
sdkwork-api-observability = { path = "../sdkwork-api-observability" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio.workspace = true

[lib]
path = "src/lib.rs"
