[package]
name = "sdkwork-api-app-marketing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sdkwork-api-domain-marketing = { path = "../sdkwork-api-domain-marketing" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
utoipa.workspace = true

[lib]
path = "src/lib.rs"
