[package]
name = "sdkwork-api-app-rate-limit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
sdkwork-api-domain-rate-limit = { path = "../sdkwork-api-domain-rate-limit" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sha2.workspace = true

[dev-dependencies]
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
tokio.workspace = true

[lib]
path = "src/lib.rs"
