[package]
name = "sdkwork-api-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sdkwork-api-secret-core = { path = "../sdkwork-api-secret-core" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }

[lib]
path = "src/lib.rs"
