[package]
name = "sdkwork-api-interface-portal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
sdkwork-api-app-billing = { path = "../sdkwork-api-app-billing" }
sdkwork-api-app-identity = { path = "../sdkwork-api-app-identity" }
sdkwork-api-app-usage = { path = "../sdkwork-api-app-usage" }
sdkwork-api-domain-billing = { path = "../sdkwork-api-domain-billing" }
sdkwork-api-domain-identity = { path = "../sdkwork-api-domain-identity" }
sdkwork-api-domain-usage = { path = "../sdkwork-api-domain-usage" }
sdkwork-api-observability = { path = "../sdkwork-api-observability" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
serde.workspace = true
sqlx.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"
