[package]
name = "sdkwork-api-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"
