[package]
name = "sdkwork-api-runtime-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
http = "1"
pingora-core = "0.6"
pingora-http = "0.6"
pingora-proxy = "0.6"
reqwest.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"

