[package]
name = "sdkwork-api-secret-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-api-secret-core = { path = "../sdkwork-api-secret-core" }

[lib]
path = "src/lib.rs"
