[package]
name = "sdkwork-router-portal-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
getrandom = "0.3.4"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tauri = { version = "2.10.3", features = ["tray-icon"] }
webbrowser = "1"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[workspace]
